...
type DropdownSelectorProps = {
    value?: boolean;
    onSwitch: () => void;
    testID?: string;
};

export function Switch({ value = true, onSwitch, testID = "switch-pressable" }: DropdownSelectorProps) {
  const theme = useTheme();
  const styles = createStyles(theme);

  const progress = useDerivedValue(() => {
    return withTiming(value ? 1 : 0, { duration: 200 });
  }, [value]);
...
